# rust_template

./: Cargo.toml  LICENSE  README.md
crates/data_store/: Cargo.toml
crates/data_store/src/: lib.rs
crates/front_end/: Cargo.toml
crates/front_end/src/: lib.rs  main.rs
